# eml-validator

./: Makefile  README.md  pyproject.toml
src/eml_validator/: __init__.py  cli.py  models.py  report.py
src/eml_validator/validators/: __init__.py  auth_validator.py  dkim_validator.py  mime_validator.py  rfc_validator.py
tests/: conftest.py  test_dkim_validator.py  test_mime_validator.py  test_rfc_validator.py
